# messenger

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
core/: CMakeLists.txt
core/include/: account.h
core/include/core/: account.h
core/src/: account.c
crypto/: CMakeLists.txt
crypto/include/: identity.h
crypto/include/crypto/: hash.h  identity.h  sign.h
crypto/src/: hash.c  identity.c  sign.c
docs/: architecture.md
docs/RFC/: RFC-0001-account-creation.md  RFC-0002-username-derivation-scheme.md  RFC-Template.md
docs/api/html/: account_8c.html  account_8c.js  account_8h.html  account_8h.js  account_8h_source.html  annotated.html  annotated_dup.js  base58_8c.html  base58_8c.js  base58_8h.html  base58_8h.js  base58_8h_source.html  classes.html  dir_24d671cfcbc5d5238a6bd565a49d198f.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_473aa96effc63dc55b97b5ea150334a2.html  dir_473aa96effc63dc55b97b5ea150334a2.js  dir_4f7b36fb0bfdfe16f35b59bd562960a4.html  dir_4f7b36fb0bfdfe16f35b59bd562960a4.js  dir_53403d93963d3f5d2fcffd0698f5bddb.html  dir_53403d93963d3f5d2fcffd0698f5bddb.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_77a85c7f8d1c43bdedaa03af8f37991c.html  dir_77a85c7f8d1c43bdedaa03af8f37991c.js  dir_7aaa9be0db659c034f76fbd23c494013.html  dir_7aaa9be0db659c034f76fbd23c494013.js  dir_7ddb45a024f6a6377b0bf843923fcf81.html  dir_7ddb45a024f6a6377b0bf843923fcf81.js  dir_88d7258dc5b554ec9515813e2529a3b7.html  dir_88d7258dc5b554ec9515813e2529a3b7.js  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.js  dir_9982052f7ce695d12571567315b2fafa.html  dir_aa8495fa082654d46e540cba6573a424.html  dir_aa8495fa082654d46e540cba6573a424.js  dir_e1e24995c230a3fd0d8048d1f984dafd.html  dir_e1e24995c230a3fd0d8048d1f984dafd.js  dir_f017f8d1aea2530cee9690020bbdf1df.html  dir_f017f8d1aea2530cee9690020bbdf1df.js  (+55 more)
docs/api/latex/: account_8c.tex  account_8h.tex  account_8h_source.tex  annotated.tex  base58_8c.tex  (+43 more)
docs/coding/: naming.md  style.md
docs/design/: RFC-001-account-creation.md  rfc-001-auth-flow.md
docs/development/: commits.md
shared/encoding/: base58.c  base58.h
shared/src/: base58.c
tests/: CMakeLists.txt  test_main.c
tests/core/: test_account.c  test_account_create.c  test_identity_verify.c
tests/crypto/: test_hash.c  test_sign.c
(+56 files in other folders)
